testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment19.errors.txt
semver.js(2,1): error TS2631: Cannot assign to '"semver"' because it is a namespace.


==== index.js (0 errors) ====
    /// <reference path='./types.d.ts'/>
    const C = require("./semver")
    var two = C.f(1)
    
==== types.d.ts (0 errors) ====
    declare var require: any;
    declare var module: any;
==== semver.js (1 errors) ====
    /// <reference path='./types.d.ts'/>
    exports = module.exports = C
    ~~~~~~~
!!! error TS2631: Cannot assign to '"semver"' because it is a namespace.
    C.f = n => n + 1
    function C() {
        this.p = 1
    }